--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "MTA3ODAzNjYxNTcyMjcxNzI1NA.GZqynS.NmouQc1oF8umD8QwBIhx2uHGonSZ5EbL9T0zYY",
+    "token": "MTA3ODAzNjYxNTcyMjcxNzI1NA.GlZgib.FZ4LWnkg8LGrlBdFkuOFhfJgtaj3NykF1dNX88",
     "prefix": "!"
   }
