some token stuff

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "MTA3ODAzNjYxNTcyMjcxNzI1NA.GlZgib.FZ4LWnkg8LGrlBdFkuOFhfJgtaj3NykF1dNX88",
+    "token": "MTA3ODAzNjYxNTcyMjcxNzI1NA.G9TLED.7_NZsvxWG8_l6QPUUTjFi8uun7-QsCtVI2vMGU",
     "prefix": "!"
   }
